--- a/app/motdujour/src/pages/quiz/quiz.html
+++ b/app/motdujour/src/pages/quiz/quiz.html
@@ -1,17 +1,19 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>{{ 'remember' | translate }}</ion-title>
+    <ion-title>{{ 'quiz' | translate }}</ion-title>
   </ion-navbar>
 </ion-header>
 <ion-content padding>
+  <ion-card *ngIf="questions.length === 0">
+    <p>{{ 'welcome' | translate }}</p>
+  </ion-card>
   <ion-card *ngFor="let q of questions">
     <ion-card-content>
-<ion-icon *ngIf="q.result === 1" name="checkmark-circle" color="primary"></ion-icon><ion-icon *ngIf="q.result === 0" name="alert" color="danger"></ion-icon>
-{{ q.text }}
+      <div [innerHTML]="q.text"></div>
       <ion-list>
         <ion-item>
-          <ion-label stacked>{{'answer' | translate}}</ion-label>
-          <ion-input [disabled]="sent" type="text" [(ngModel)]="q.userAnswer"></ion-input>
+          <ion-label stacked>{{'answer' | translate}} </ion-label>
+          <ion-input [disabled]="sent" type="text" [(ngModel)]="q.userAnswer" required></ion-input>
         </ion-item>
         <ion-item *ngIf="q.result === 0">
           <h4>{{'correctAnswer' | translate}}</h4>
@@ -19,7 +21,13 @@
         </ion-item>
       </ion-list>
     </ion-card-content>
+    <ion-row no-padding>
+      <ion-col text-right>
+        <ion-icon *ngIf="q.result === 1" name="checkmark-circle" color="primary"></ion-icon>
+        <ion-icon *ngIf="q.result === 0" name="alert" color="danger"></ion-icon>
+      </ion-col>
+    </ion-row>
   </ion-card>
-  <button ion-button *ngIf="!sent" (click)="sendResponse()">{{ 'send' | translate }}</button> 
+  <button ion-button *ngIf="!sent && questions.length > 0" (click)="sendResponse()">{{ 'send' | translate }}</button> 
   <button ion-button (click)="goToNext()">{{ 'start' | translate }}</button> 
 </ion-content>
